--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>My First Bitstarter</title>
+	<title>TITLE OF THE BITSTATER PROJECT</title>
 	<meta name="viewport" content="width=deveice-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
 	<link rel="stylesheet" type="text/css" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -111,7 +111,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="brand" href="#">Project name</a>
+				<a class="brand" href="#">AWESOME-COOLEST-PROJECT</a>
 				<div class="nav-collapse collapse">
 					<ul class="nav">
 						<li class="active"><a href="#">Home</a></li>
@@ -126,17 +126,17 @@
 	<div class="container">
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Product</h1>
+				<h1>AWESOME-COOLEST-PRODUCT</h1>
 			</div>
 		</div>
 		<div class="row-fluid subheading">
 			<div class="span12">
-				<p class="lead">One sentence description</p>
+				<p class="lead">The most awesome project ever!</p>
 				</div>
 			</div>
 			<div class="row-fluid pitch">
 				<div class="span5 offset1 video">
-					<img class="img-polaroid" src="http://placehold.it/480x300">
+					<img class="img-polaroid" src="http://images.lazygamer.net/2012/10/shut-up-and-take-my-money.jpg">
 				</div>
 
 				<div class="span5 actions">
@@ -149,12 +149,12 @@
 							</div>
 							<div class="span4">
 								<div class="linediv-c">
-									<h3>$6000</h3><p>of $10,000</p>
+									<h3>0€</h3><p>of 10,000€</p>
 								</div>
 							</div>
 							<div class="span4">
 								<div class="linediv-r">
-									<h3>10</h3><p>days left</p>
+									<h3>100</h3><p>days left</p>
 								</div>
 							</div>
 						</div>
@@ -177,19 +177,19 @@
 
 			<div class="row-fluid section1">
 				<div class="span5 offset1 asset">
-					<img clas="img-polaroid" src="http://placehold.it/480x300">
+					<img clas="img-polaroid" src="http://images.lazygamer.net/2012/10/shut-up-and-take-my-money.jpg">
 				</div>
 				<div class="span5 copy">
-					<p>LOREM IPSUM</p>
+					<p>TO BE FILLED</p>
 				</div>
 			</div>
 
 			<div class="row-fluid section2">
 				<div class="span5 offset1 copy copy-right">
-					<p>LOREM IPSUM</p>
+					<p>TO BE FILLED</p>
 				</div>
 				<div class="span5 asset">
-					<img class="img-polaroid" src="http://placehold.it/480x300" >
+					<img class="img-polaroid" src="http://images.lazygamer.net/2012/10/shut-up-and-take-my-money.jpg" >
 				</div>
 			</div>
 
