--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
     	<div class="span6 offset3 order">
     		<!-- Standard Bootstrap button. -->
     		<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-    		<button class="btn btn-success btn-large">Preorder</button>
+    		
+    		<a class="coinbase-button" data-code="e441cbbf7fd19496ce964067d93be936" href="https://coinbase.com/checkouts/e441cbbf7fd19496ce964067d93be936">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
     	</div>
     </div>
     <div class="row-fluid">
